修复包扫描路径错误, APPPATH路径修改

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
 }
 
 gretty {
-    contextPath = "/test"
+    contextPath = "/doc"
     httpPort = 8888
     servletContainer = 'tomcat8'
 }
