--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     compile("org.hibernate:hibernate-core:5.0.1.Final")
     compile("com.google.guava:guava:18.0")
 
+//     commonio
+    compile('commons-io:commons-io:2.5')
+    compile('commons-fileupload:commons-fileupload:1.3.1')
+
 //  poi
     compile('org.apache.poi:poi:3.15-beta1')
     compile('org.apache.poi:poi-ooxml:3.15-beta1')
