--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     compile('commons-io:commons-io:2.5')
     compile('commons-fileupload:commons-fileupload:1.3.1')
 
+    compile('com.alibaba:fastjson:1.2.11')
+
 //  poi
     compile('org.apache.poi:poi:3.15-beta1')
     compile('org.apache.poi:poi-ooxml:3.15-beta1')
@@ -46,7 +48,11 @@ dependencies {
     compile('org.apache.poi:poi-scratchpad:3.15-beta1')
     compile('org.apache.poi:poi-examples:3.15-beta1')
 
+//  'com.fasterxml.jackson.core:jackson-core:2.7.4'
 
+    compile('com.fasterxml.jackson.core:jackson-core:2.7.4')
+    compile('com.fasterxml.jackson.core:jackson-databind:2.7.4')
+    compile('com.fasterxml.jackson.core:jackson-annotations:2.7.4')
 
     testCompile("org.springframework:spring-test:4.2.1.RELEASE")
     testCompile("com.github.springtestdbunit:spring-test-dbunit:1.2.1")
