--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     compile('org.apache.poi:poi-scratchpad:3.15-beta1')
     compile('org.apache.poi:poi-examples:3.15-beta1')
 
+
+    compile('fr.opensagres.xdocreport:org.apache.poi.xwpf.converter.core:1.0.5')
+    compile('fr.opensagres.xdocreport:org.apache.poi.xwpf.converter.xhtml:1.0.5')
 //  'com.fasterxml.jackson.core:jackson-core:2.7.4'
 
     compile('com.fasterxml.jackson.core:jackson-core:2.7.4')
